# HDDL-JSONParser

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: cli_args.rs  hddl_json_parser.rs  lib.rs  main.rs  symbol_table.rs
src/auxiliary_structs/: mod.rs  typed_list.rs
src/language_server/: diagnostic_utils.rs  mod.rs  request_handler.rs
src/lexical_analyzer/: errors.rs  mod.rs  tests.rs  token_pos.rs  token_types.rs  tokenizer.rs
src/output/: metadata.rs  mod.rs  warnings.rs
src/parsing_error/: generic_error.rs  lexical_errors.rs  mod.rs
src/parsing_errors/: generic_error.rs  mod.rs  semantic_errors.rs  syntactical_errors.rs
src/semantic_analyzer/: analyzer.rs  cycle_detection.rs  duplicate_detection.rs  mod.rs  problem_analyzer.rs  semantic_errors.rs  tdg.rs  type_checker.rs  undefined_elements.rs
src/symbol_table/: mod.rs  table.rs
src/syntactic_analyzer/: definition_types.rs  mod.rs  parser.rs  syntactical_errors.rs
tests/: integration.rs  integration_flawed.rs  integration_ipc.rs
tests/flawed_domains/: abstract-task-without-decomposition-domain.hddl  abstract-task-without-refinement-domain.hddl  complementary-effects-domain.hddl  complementary-preconditions-domain.hddl  cyclic-ordering-for-subtasks-domain.hddl  directly-cyclic-subtypes-domain.hddl  duplicate-action-domain.hddl  duplicate-compound-task-domain.hddl  duplicate-decomposition-method-domain.hddl  duplicate-parameters-domain.hddl  duplicate-predicate-domain.hddl  extra-parentheses-domain.hddl  forgotten-dash-domain.hddl  forgotten-entries-domain.hddl  undefined-predicate-domain.hddl  (+11 more)
(+52 files in other folders)
