[package]
name = "hddl_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "ipc"
path = "tests/integration_ipc.rs"

[[test]]
name = "flawed"
path = "tests/integration_flawed.rs"


[dependencies]
Robinson = { version = "0.1.0", path = "Robinson" }
clap = { version = "4.5.20", features = ["derive"] }
petgraph = "*"
